strapi/ops/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  namespace: cacao-dev
  labels:
    app.kubernetes.io/instance: cacao-dev
    app.kubernetes.io/name: strapi
    app.kubernetes.io/part-of: cacao
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: cacao-dev
      app.kubernetes.io/name: strapi
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: cacao-dev
        app.kubernetes.io/name: strapi
        app.kubernetes.io/part-of: cacao
    spec:
      containers:
        - name: strapi
          image: node:20-alpine
          ports:
            - containerPort: 1337
          command: ["/bin/sh", "-c"]
          args:
            - |
              if [ "$DEV_MODE" = "RUN" ]; then
                npm run develop;
              else
                sleep infinity;
              fi
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1"
          volumeMounts:
            - name: strapi-storage
              mountPath: /app
      volumes:
        - name: strapi-storage
          persistentVolumeClaim:
            claimName: strapi-dev-pvc
